--- a/docs/man/man1/jx-gitops-helmfile-resolve.1
+++ b/docs/man/man1/jx-gitops-helmfile-resolve.1
@@ -41,7 +41,7 @@ Resolves the helmfile.yaml from the version stream to specify versions and helm 
 
 .PP
 \fB\-\-namespace\fP="jx"
-    the default namespace if none is specified in the helmfile.yaml or jx\-requirements.yml
+    the default namespace if none is specified in the helmfile.yaml
 
 .PP
 \fB\-\-update\fP[=false]
