--- a/docs/man/man1/jx-gitops-helmfile.1
+++ b/docs/man/man1/jx-gitops-helmfile.1
@@ -26,7 +26,7 @@ Commands for working with helmfile
 
 .SH SEE ALSO
 .PP
-\fBjx\-gitops(1)\fP, \fBjx\-gitops\-helmfile\-add(1)\fP, \fBjx\-gitops\-helmfile\-move(1)\fP, \fBjx\-gitops\-helmfile\-resolve(1)\fP, \fBjx\-gitops\-helmfile\-template(1)\fP
+\fBjx\-gitops(1)\fP, \fBjx\-gitops\-helmfile\-add(1)\fP, \fBjx\-gitops\-helmfile\-move(1)\fP, \fBjx\-gitops\-helmfile\-resolve(1)\fP, \fBjx\-gitops\-helmfile\-structure(1)\fP, \fBjx\-gitops\-helmfile\-validate(1)\fP
 
 
 .SH HISTORY
