--- a/docs/man/man1/jx-gitops-kpt-update.1
+++ b/docs/man/man1/jx-gitops-kpt-update.1
@@ -64,7 +64,7 @@ If you know a specific directory which needs updating you can always use 'kpt' d
     filter on the Kptfile repository URL for which packages to update
 
 .PP
-\fB\-v\fP, \fB\-\-version\fP="master"
+\fB\-v\fP, \fB\-\-version\fP=""
     the git version of the kpt package to upgrade to
 
 
