--- a/docs/man/man1/jx-gitops-requirement-merge.1
+++ b/docs/man/man1/jx-gitops-requirement-merge.1
@@ -42,6 +42,10 @@ This lets you take requirements from, say, the output of a terraform plan and me
 \fB\-\-namespace\fP="default"
     the namespace used to find the ConfigMap if using the ConfigMap mode
 
+.PP
+\fB\-\-retries\fP=3
+    Specify the number of times the command should be reattempted on failure
+
 
 .SH EXAMPLE
 .PP
