--- a/docs/man/man1/jx-gitops-requirement-publish.1
+++ b/docs/man/man1/jx-gitops-requirement-publish.1
@@ -32,8 +32,8 @@ Publishes the current jx\-requirements.yml to the dev Environment so it can be e
     help for publish
 
 .PP
-\fB\-\-namespace\fP=""
-    the namespace used to find the git operator secret for the git repository if running in cluster. Defaults to the current namespace
+\fB\-\-namespace\fP="jx"
+    the namespace used to find dev\-environment.yaml
 
 
 .SH EXAMPLE
