--- a/docs/man/man1/jx-gitops-upgrade.1
+++ b/docs/man/man1/jx-gitops-upgrade.1
@@ -49,7 +49,7 @@ Upgrades the GitOps git repository with the latest configuration and versions th
 
 .PP
 \fB\-\-namespace\fP="jx"
-    the default namespace if none is specified in the helmfile.yaml or jx\-requirements.yml
+    the default namespace if none is specified in the helmfile.yaml
 
 .PP
 \fB\-o\fP, \fB\-\-owner\fP=""
@@ -68,7 +68,7 @@ Upgrades the GitOps git repository with the latest configuration and versions th
     filter on the Kptfile repository URL for which packages to update
 
 .PP
-\fB\-v\fP, \fB\-\-version\fP="master"
+\fB\-v\fP, \fB\-\-version\fP=""
     the git version of the kpt package to upgrade to
 
 
