--- a/docs/man/man1/jx-gitops-variables.1
+++ b/docs/man/man1/jx-gitops-variables.1
@@ -24,6 +24,10 @@ Lazily creates a .jx/variables.sh script with common pipeline environment variab
     the build number to use. If not specified defaults to $BUILD\_NUMBER
 
 .PP
+\fB\-\-commit\fP[=true]
+    commit variables.sh
+
+.PP
 \fB\-\-configmap\fP="jenkins\-x\-docker\-registry"
     the ConfigMap used to load environment variables
 
