--- a/docs/man/man1/jx-gitops-webhook-update.1
+++ b/docs/man/man1/jx-gitops-webhook-update.1
@@ -72,6 +72,10 @@ Updates the webhooks for all the source repositories optionally filtering by own
     The name of the repository to filter on
 
 .PP
+\fB\-\-retries\fP=3
+    Specify the number of times the command should be reattempted on failure
+
+.PP
 \fB\-\-verbose\fP[=false]
     Enables verbose output. The environment variable JX\_LOG\_LEVEL has precedence over this flag and allows setting the logging level to any value of: panic, fatal, error, warn, info, debug, trace
 
