--- a/docs/man/man1/jx-gitops-requirement-edit.1
+++ b/docs/man/man1/jx-gitops-requirement-edit.1
@@ -28,10 +28,6 @@ Edits the local 'jx\-requirements.yml file
     enables or disables auto upgrades
 
 .PP
-\fB\-\-boot\-config\-url\fP=""
-    specify the boot configuration git URL
-
-.PP
 \fB\-\-bucket\-backups\fP=""
     the bucket URL to store backups
 
@@ -86,28 +82,12 @@ Edits the local 'jx\-requirements.yml file
 \[la]https://gitlab.com\[ra]
 
 .PP
-\fB\-g\fP, \fB\-\-gitops\fP[=false]
-    enables or disables the use of gitops
-
-.PP
-\fB\-\-helm\-version\fP=""
-    configures the Helm major version. e.g. 3 to try helm 3
-
-.PP
 \fB\-h\fP, \fB\-\-help\fP[=false]
     help for edit
 
 .PP
-\fB\-\-kaniko\fP[=false]
-    enables or disables the use of kaniko
-
-.PP
 \fB\-\-kaniko\-sa\fP=""
     configures the Kaniko service account name
-
-.PP
-\fB\-n\fP, \fB\-\-namespace\fP=""
-    configures the namespace to use
 
 .PP
 \fB\-\-project\fP=""
@@ -128,10 +108,6 @@ Edits the local 'jx\-requirements.yml file
 .PP
 \fB\-s\fP, \fB\-\-secret\fP=""
     configures the kind of secret storage. Values: local, vault
-
-.PP
-\fB\-\-terraform\fP[=false]
-    enables or disables the use of terraform
 
 .PP
 \fB\-\-tls\-email\fP=""
@@ -166,24 +142,8 @@ Edits the local 'jx\-requirements.yml file
     specify the vault Service Account name
 
 .PP
-\fB\-\-velero\-ns\fP=""
-    specify the Velero Namespace
-
-.PP
-\fB\-\-velero\-sa\fP=""
-    specify the Velero Service Account name
-
-.PP
-\fB\-\-version\-stream\-ref\fP=""
-    specify the Version Stream git reference (branch, tag, sha)
-
-.PP
-\fB\-\-version\-stream\-url\fP=""
-    specify the Version Stream git URL
-
-.PP
 \fB\-w\fP, \fB\-\-webhook\fP=""
-    configures the kind of webhook. Values jenkins, lighthouse, prow
+    configures the kind of webhook. Values lighthouse
 
 .PP
 \fB\-z\fP, \fB\-\-zone\fP=""
