chore: regen docs

--- a/docs/man/man1/jx-gitops-git-get.1
+++ b/docs/man/man1/jx-gitops-git-get.1
@@ -20,6 +20,10 @@ Gets a file from a git repository or environment git repository
 
 .SH OPTIONS
 .PP
+\fB\-\-branch\fP=""
+    specifies the branch if not inside a git clone
+
+.PP
 \fB\-\-dir\fP="."
     the directory to search for the .git to discover the git source URL
 
@@ -58,6 +62,10 @@ Gets a file from a git repository or environment git repository
 .PP
 \fB\-r\fP, \fB\-\-repo\fP=""
     the full git repository name of the form 'owner/name'
+
+.PP
+\fB\-\-source\-url\fP=""
+    the git source URL of the repository
 
 .PP
 \fB\-\-to\fP=""
