--- a/docs/man/man1/jx-gitops-pr-comment.1
+++ b/docs/man/man1/jx-gitops-pr-comment.1
@@ -20,6 +20,10 @@ Adds a comment to the current pull request
 
 .SH OPTIONS
 .PP
+\fB\-\-branch\fP=""
+    specifies the branch if not inside a git clone
+
+.PP
 \fB\-c\fP, \fB\-\-comment\fP=""
     comment to add
 
@@ -50,6 +54,10 @@ Adds a comment to the current pull request
 .PP
 \fB\-r\fP, \fB\-\-repo\fP=""
     the full git repository name of the form 'owner/name'
+
+.PP
+\fB\-\-source\-url\fP=""
+    the git source URL of the repository
 
 
 .SH EXAMPLE
