--- a/docs/man/man1/jx-gitops-pr-get.1
+++ b/docs/man/man1/jx-gitops-pr-get.1
@@ -20,6 +20,10 @@ Gets a pull request and displays fields from it
 
 .SH OPTIONS
 .PP
+\fB\-\-branch\fP=""
+    specifies the branch if not inside a git clone
+
+.PP
 \fB\-\-dir\fP="."
     the directory to search for the .git to discover the git source URL
 
@@ -50,6 +54,10 @@ Gets a pull request and displays fields from it
 .PP
 \fB\-r\fP, \fB\-\-repo\fP=""
     the full git repository name of the form 'owner/name'
+
+.PP
+\fB\-\-source\-url\fP=""
+    the git source URL of the repository
 
 
 .SH EXAMPLE
