--- a/docs/man/man1/jx-gitops-pr-label.1
+++ b/docs/man/man1/jx-gitops-pr-label.1
@@ -24,6 +24,10 @@ Adds a label to the current pull request
     Runs in batch mode without prompting for user input
 
 .PP
+\fB\-\-branch\fP=""
+    specifies the branch if not inside a git clone
+
+.PP
 \fB\-\-dir\fP="."
     the directory to search for the .git to discover the git source URL
 
@@ -66,6 +70,10 @@ Adds a label to the current pull request
 .PP
 \fB\-r\fP, \fB\-\-repo\fP=""
     the full git repository name of the form 'owner/name'
+
+.PP
+\fB\-\-source\-url\fP=""
+    the git source URL of the repository
 
 .PP
 \fB\-\-verbose\fP[=false]
