--- a/docs/man/man1/jx-gitops-pr-push.1
+++ b/docs/man/man1/jx-gitops-pr-push.1
@@ -20,6 +20,10 @@ Pushes the current git directory to the branch used to create the Pull Request
 
 .SH OPTIONS
 .PP
+\fB\-\-branch\fP=""
+    specifies the branch if not inside a git clone
+
+.PP
 \fB\-\-dir\fP="."
     the directory to search for the .git to discover the git source URL
 
@@ -58,6 +62,10 @@ Pushes the current git directory to the branch used to create the Pull Request
 .PP
 \fB\-r\fP, \fB\-\-repo\fP=""
     the full git repository name of the form 'owner/name'
+
+.PP
+\fB\-\-source\-url\fP=""
+    the git source URL of the repository
 
 
 .SH EXAMPLE
