chore: regen docs

--- a/docs/man/man1/jx-gitops-helmfile-add.1
+++ b/docs/man/man1/jx-gitops-helmfile-add.1
@@ -56,6 +56,10 @@ Adds a chart to the local 'helmfile.yaml' file
     the helm chart repository URL of the chart
 
 .PP
+\fB\-\-values\fP=[]
+    the values files to add to the chart
+
+.PP
 \fB\-v\fP, \fB\-\-version\fP=""
     the version of the helm chart. If not specified the versionStream will be checked otherwise the latest version is used
 
