--- a/docs/man/man1/jx-gitops-repository-add.1
+++ b/docs/man/man1/jx-gitops-repository-add.1
@@ -36,6 +36,10 @@ Add one or more repositories to the SourceConfig
     help for add
 
 .PP
+\fB\-j\fP, \fB\-\-jenkins\fP=""
+    the name of the Jenkins server to add the repository to
+
+.PP
 \fB\-k\fP, \fB\-\-kind\fP=[]
     adds Kubernetes resource kinds to filter on. For kind expressions see: 
 \[la]https://github.com/jenkins-x/jx-helpers/v3/tree/master/docs/kind_filters.md\[ra]
