chore: regen docs

--- a/docs/man/man1/jx-gitops-jenkins.1
+++ b/docs/man/man1/jx-gitops-jenkins.1
@@ -26,7 +26,7 @@ Commands for working with Jenkins GitOps configuration
 
 .SH SEE ALSO
 .PP
-\fBjx\-gitops(1)\fP, \fBjx\-gitops\-jenkins\-jobs(1)\fP
+\fBjx\-gitops(1)\fP, \fBjx\-gitops\-jenkins\-add(1)\fP, \fBjx\-gitops\-jenkins\-jobs(1)\fP
 
 
 .SH HISTORY
