--- a/docs/man/man1/jx-gitops-sa-secret.1
+++ b/docs/man/man1/jx-gitops-sa-secret.1
@@ -28,6 +28,10 @@ Adds one or more secrets to the given ServiceAccount files
     help for secret
 
 .PP
+\fB\-\-invert\-selector\fP[=false]
+    inverts the effect of selector to exclude resources matched by selector
+
+.PP
 \fB\-k\fP, \fB\-\-kind\fP=[]
     adds Kubernetes resource kinds to filter on. For kind expressions see: 
 \[la]https://github.com/jenkins-x/jx-helpers/v3/tree/master/docs/kind_filters.md\[ra]
@@ -40,6 +44,10 @@ Adds one or more secrets to the given ServiceAccount files
 .PP
 \fB\-s\fP, \fB\-\-secret\fP=[]
     the Secret names to add to the ServiceAccount
+
+.PP
+\fB\-\-selector\fP=[]
+    adds Kubernetes label selector to filter on, e.g. \-s app=pusher\-wave,heritage=Helm
 
 
 .SH EXAMPLE
