--- a/docs/man/man1/jx-gitops-image.1
+++ b/docs/man/man1/jx-gitops-image.1
@@ -28,6 +28,10 @@ Updates images in the kubernetes resources from the version stream
     help for image
 
 .PP
+\fB\-\-invert\-selector\fP[=false]
+    inverts the effect of selector to exclude resources matched by selector
+
+.PP
 \fB\-k\fP, \fB\-\-kind\fP=[]
     adds Kubernetes resource kinds to filter on. For kind expressions see: 
 \[la]https://github.com/jenkins-x/jx-helpers/v3/tree/master/docs/kind_filters.md\[ra]
@@ -36,6 +40,10 @@ Updates images in the kubernetes resources from the version stream
 \fB\-\-kind\-ignore\fP=[]
     adds Kubernetes resource kinds to exclude. For kind expressions see: 
 \[la]https://github.com/jenkins-x/jx-helpers/v3/tree/master/docs/kind_filters.md\[ra]
+
+.PP
+\fB\-\-selector\fP=[]
+    adds Kubernetes label selector to filter on, e.g. \-s app=pusher\-wave,heritage=Helm
 
 .PP
 \fB\-s\fP, \fB\-\-source\-dir\fP="content\-root"
