--- a/docs/man/man1/jx-gitops-repository-create.1
+++ b/docs/man/man1/jx-gitops-repository-create.1
@@ -32,6 +32,10 @@ Creates any missing SourceRepository resources
     help for create
 
 .PP
+\fB\-\-invert\-selector\fP[=false]
+    inverts the effect of selector to exclude resources matched by selector
+
+.PP
 \fB\-k\fP, \fB\-\-kind\fP=[]
     adds Kubernetes resource kinds to filter on. For kind expressions see: 
 \[la]https://github.com/jenkins-x/jx-helpers/v3/tree/master/docs/kind_filters.md\[ra]
@@ -40,6 +44,10 @@ Creates any missing SourceRepository resources
 \fB\-\-kind\-ignore\fP=[]
     adds Kubernetes resource kinds to exclude. For kind expressions see: 
 \[la]https://github.com/jenkins-x/jx-helpers/v3/tree/master/docs/kind_filters.md\[ra]
+
+.PP
+\fB\-\-selector\fP=[]
+    adds Kubernetes label selector to filter on, e.g. \-s app=pusher\-wave,heritage=Helm
 
 .PP
 \fB\-s\fP, \fB\-\-source\-dir\fP=""
