--- a/docs/man/man1/jx-gitops-repository-export.1
+++ b/docs/man/man1/jx-gitops-repository-export.1
@@ -36,6 +36,10 @@ jx\-gitops\-repository\-export \- Exports the 'source\-config.yaml' file from th
     help for export
 
 .PP
+\fB\-\-invert\-selector\fP[=false]
+    inverts the effect of selector to exclude resources matched by selector
+
+.PP
 \fB\-k\fP, \fB\-\-kind\fP=[]
     adds Kubernetes resource kinds to filter on. For kind expressions see: 
 \[la]https://github.com/jenkins-x/jx-helpers/v3/tree/master/docs/kind_filters.md\[ra]
@@ -48,6 +52,10 @@ jx\-gitops\-repository\-export \- Exports the 'source\-config.yaml' file from th
 .PP
 \fB\-n\fP, \fB\-\-namespace\fP=""
     the namespace to look for SourceRepository, SourceRepositoryGroup and Scheduler resources
+
+.PP
+\fB\-\-selector\fP=[]
+    adds Kubernetes label selector to filter on, e.g. \-s app=pusher\-wave,heritage=Helm
 
 
 .SH EXAMPLE
