--- a/docs/man/man1/jx-gitops-git-setup.1
+++ b/docs/man/man1/jx-gitops-git-setup.1
@@ -39,6 +39,11 @@ This is typically used in a pipeline to ensure git can do commits.
     for testing: lets you fake running this command inside a kubernetes cluster so that it can create the file: $XDG\_CONFIG\_HOME/git/credentials or $HOME/git/credentials
 
 .PP
+\fB\-\-git\-provider\fP=""
+    the git provider URL. If not specified its detected from the git operator Secret or defaults to 
+\[la]https://github.com\[ra]
+
+.PP
 \fB\-h\fP, \fB\-\-help\fP[=false]
     help for setup
 
@@ -53,6 +58,10 @@ This is typically used in a pipeline to ensure git can do commits.
 .PP
 \fB\-\-operator\-namespace\fP="jx\-git\-operator"
     the namespace used by the git operator to find the secret for the git repository if running in cluster
+
+.PP
+\fB\-\-password\fP=""
+    the git password/token to use. if not specified it is detected from the git operator Secret
 
 .PP
 \fB\-\-secret\fP="jx\-boot"
