--- a/docs/man/man1/jx-gitops-variables.1
+++ b/docs/man/man1/jx-gitops-variables.1
@@ -20,10 +20,6 @@ Lazily creates a .jx/variables.sh script with common pipeline environment variab
 
 .SH OPTIONS
 .PP
-\fB\-\-branch\fP=""
-    specifies the branch if not inside a git clone
-
-.PP
 \fB\-\-build\-number\fP=""
     the build number to use. If not specified defaults to $BUILD\_NUMBER
 
@@ -56,6 +52,14 @@ Lazily creates a .jx/variables.sh script with common pipeline environment variab
     the git token used to operate on the git repository
 
 .PP
+\fB\-\-git\-user\-email\fP=""
+    the user email to git commit
+
+.PP
+\fB\-\-git\-user\-name\fP=""
+    the user name to git commit
+
+.PP
 \fB\-h\fP, \fB\-\-help\fP[=false]
     help for variables
 
@@ -64,20 +68,12 @@ Lazily creates a .jx/variables.sh script with common pipeline environment variab
     the namespace to look for the dev Environment. Defaults to the current namespace
 
 .PP
-\fB\-r\fP, \fB\-\-repo\fP=""
-    the full git repository name of the form 'owner/name'
-
-.PP
 \fB\-n\fP, \fB\-\-repo\-name\fP="release\-repo"
     the name of the helm chart to release to. If not specified uses JX\_CHART\_REPOSITORY environment variable
 
 .PP
 \fB\-u\fP, \fB\-\-repo\-url\fP=""
     the URL to release to
-
-.PP
-\fB\-\-source\-url\fP=""
-    the git source URL of the repository
 
 .PP
 \fB\-\-version\-file\fP=""
