--- a/docs/man/man1/jx-gitops-helmfile-move.1
+++ b/docs/man/man1/jx-gitops-helmfile-move.1
@@ -30,6 +30,10 @@ So this command applies the namespace to all the generated resources and then mo
     the directory containing the generated resources
 
 .PP
+\fB\-\-dir\-includes\-release\-name\fP[=false]
+    the directory containing the generated resources has a path segment that is the release name
+
+.PP
 \fB\-h\fP, \fB\-\-help\fP[=false]
     help for move
 
