chore: regen docs

--- a/docs/man/man1/jx-gitops-helmfile-resolve.1
+++ b/docs/man/man1/jx-gitops-helmfile-resolve.1
@@ -20,6 +20,10 @@ Resolves the helmfile.yaml from the version stream to specify versions and helm 
 
 .SH OPTIONS
 .PP
+\fB\-\-add\-environment\-pipelines\fP[=false]
+    skips the custom upgrade step for adding .lighthouse folder
+
+.PP
 \fB\-\-commit\-message\fP="chore: generated kubernetes resources from helm chart"
     the git commit message used
 
