--- a/docs/man/man1/jx-gitops-upgrade.1
+++ b/docs/man/man1/jx-gitops-upgrade.1
@@ -20,6 +20,10 @@ Upgrades the GitOps git repository with the latest configuration and versions th
 
 .SH OPTIONS
 .PP
+\fB\-\-add\-environment\-pipelines\fP[=false]
+    skips the custom upgrade step for adding .lighthouse folder
+
+.PP
 \fB\-\-bin\fP=""
     the 'kpt' binary name to use. If not specified this command will download the jx binary plugin into \~/.jx3/plugins/bin and use that
 
