chore: regen docs

--- a/docs/man/man1/jx-gitops-helm-release.1
+++ b/docs/man/man1/jx-gitops-helm-release.1
@@ -20,6 +20,10 @@ Generate the kubernetes resources from a helm chart
 
 .SH OPTIONS
 .PP
+\fB\-\-artifactory\fP[=false]
+    use artifactory mode for publishing the chart which involves using an artifactory header and \-T for pushing the chart
+
+.PP
 \fB\-c\fP, \fB\-\-charts\-dir\fP="charts"
     the directory to look for helm charts to release
 
