chore: regen docs

--- a/docs/man/man1/jx-gitops-copy.1
+++ b/docs/man/man1/jx-gitops-copy.1
@@ -63,11 +63,11 @@ Copies kubernetes resources (by default confimaps) from a namespace to the curre
 
 .PP
 # copies config maps with a selector to a namespace
-  %!s(MISSING) copy \-l mylabel=something \-\-to=foo
+  jx\-gitops copy \-l mylabel=something \-\-to=foo
 
 .PP
 # copies resources matching a selector and kind
-  %!s(MISSING) copy \-\-kind ingresses \-l mylabel=something \-\-to=foo
+  jx\-gitops copy \-\-kind ingresses \-l mylabel=something \-\-to=foo
 
 
 .SH SEE ALSO
