--- a/docs/man/man1/jx-gitops-helmfile-status.1
+++ b/docs/man/man1/jx-gitops-helmfile-status.1
@@ -24,6 +24,10 @@ Updates the git deployment status after a release
     the directory that contains the content
 
 .PP
+\fB\-f\fP, \fB\-\-fail\fP[=false]
+    if enabled then fail the boot pipeline if we cannot report the deployment status
+
+.PP
 \fB\-h\fP, \fB\-\-help\fP[=false]
     help for status
 
