--- a/docs/man/man1/jx-gitops-pr-label.1
+++ b/docs/man/man1/jx-gitops-pr-label.1
@@ -87,7 +87,7 @@ Adds a label to the current pull request
 
 .PP
 # add label if there exists a matching label with the regex
-  %!s(MISSING) pr label \-n mylabel \-\-matches "env/.*"
+  jx\-gitops pr label \-n mylabel \-\-matches "env/.*"
 
 
 .SH SEE ALSO
