--- a/docs/man/man1/jx-gitops-requirement-merge.1
+++ b/docs/man/man1/jx-gitops-requirement-merge.1
@@ -53,7 +53,7 @@ This lets you take requirements from, say, the output of a terraform plan and me
   jx\-gitops requirements merge \-f /tmp/jx\-requirements.yml
 
 .PP
-# merge requirements from a ConfigMap called 'terraform\-jx\-requiremnets' in the default namespace
+# merge requirements from a ConfigMap called 'terraform\-jx\-requirements' in the default namespace
   jx\-gitops requirements merge
 
 
