--- a/docs/man/man1/jx-gitops-versionstream.1
+++ b/docs/man/man1/jx-gitops-versionstream.1
@@ -57,11 +57,11 @@ Administer the cluster version stream settings
 
 .PP
 # switch to latest version stream
-  %!s(MISSING) versionstream \-\-latest
+  jx\-gitops versionstream \-\-latest
 
 .PP
 # switch to a custom version stream
-  %!s(MISSING) versionstream \-\-custom \-\-url 
+  jx\-gitops versionstream \-\-custom \-\-url 
 \[la]https://github.com/foo/bar.git\[ra] \-\-ref main
 
 
