chore: regen docs

--- a/docs/man/man1/jx-gitops-helmfile-resolve.1
+++ b/docs/man/man1/jx-gitops-helmfile-resolve.1
@@ -51,6 +51,10 @@ Resolves the helmfile.yaml from the version stream to specify versions and helm 
 \fB\-\-update\fP[=false]
     updates versions from the version stream if they have changed
 
+.PP
+\fB\-\-version\-stream\-dir\fP=""
+    the directory for the version stream. Defaults to 'versionStream' in the current \-\-dir
+
 
 .SH EXAMPLE
 .PP
