--- a/docs/man/man1/jx-gitops-upgrade.1
+++ b/docs/man/man1/jx-gitops-upgrade.1
@@ -87,6 +87,10 @@ Upgrades the GitOps git repository with the latest configuration and versions th
 \fB\-v\fP, \fB\-\-version\fP=""
     the git version of the kpt package to upgrade to
 
+.PP
+\fB\-\-version\-stream\-dir\fP=""
+    the directory for the version stream. Defaults to 'versionStream' in the current \-\-dir
+
 
 .SH SEE ALSO
 .PP
