--- a/docs/man/man1/jx-gitops.1
+++ b/docs/man/man1/jx-gitops.1
@@ -5,7 +5,7 @@
 
 .SH NAME
 .PP
-jx\-gitops \- GitOps utility commands
+jx\-gitops \- commands for working with GitOps based git repositories
 
 
 .SH SYNOPSIS
@@ -15,7 +15,7 @@ jx\-gitops \- GitOps utility commands
 
 .SH DESCRIPTION
 .PP
-GitOps utility commands
+commands for working with GitOps based git repositories
 
 
 .SH OPTIONS
