chore: regen docs

--- a/docs/man/man1/jx-gitops.1
+++ b/docs/man/man1/jx-gitops.1
@@ -26,7 +26,7 @@ commands for working with GitOps based git repositories
 
 .SH SEE ALSO
 .PP
-\fBjx\-gitops\-annotate(1)\fP, \fBjx\-gitops\-apply(1)\fP, \fBjx\-gitops\-condition(1)\fP, \fBjx\-gitops\-copy(1)\fP, \fBjx\-gitops\-gc(1)\fP, \fBjx\-gitops\-git(1)\fP, \fBjx\-gitops\-hash(1)\fP, \fBjx\-gitops\-helm(1)\fP, \fBjx\-gitops\-helmfile(1)\fP, \fBjx\-gitops\-image(1)\fP, \fBjx\-gitops\-ingress(1)\fP, \fBjx\-gitops\-jenkins(1)\fP, \fBjx\-gitops\-kpt(1)\fP, \fBjx\-gitops\-kustomize(1)\fP, \fBjx\-gitops\-label(1)\fP, \fBjx\-gitops\-lint(1)\fP, \fBjx\-gitops\-namespace(1)\fP, \fBjx\-gitops\-plugin(1)\fP, \fBjx\-gitops\-postprocess(1)\fP, \fBjx\-gitops\-pr(1)\fP, \fBjx\-gitops\-rename(1)\fP, \fBjx\-gitops\-repository(1)\fP, \fBjx\-gitops\-requirement(1)\fP, \fBjx\-gitops\-sa(1)\fP, \fBjx\-gitops\-scheduler(1)\fP, \fBjx\-gitops\-split(1)\fP, \fBjx\-gitops\-upgrade(1)\fP, \fBjx\-gitops\-variables(1)\fP, \fBjx\-gitops\-version(1)\fP, \fBjx\-gitops\-versionstream(1)\fP, \fBjx\-gitops\-webhook(1)\fP
+\fBjx\-gitops\-annotate(1)\fP, \fBjx\-gitops\-apply(1)\fP, \fBjx\-gitops\-condition(1)\fP, \fBjx\-gitops\-copy(1)\fP, \fBjx\-gitops\-gc(1)\fP, \fBjx\-gitops\-git(1)\fP, \fBjx\-gitops\-hash(1)\fP, \fBjx\-gitops\-helm(1)\fP, \fBjx\-gitops\-helmfile(1)\fP, \fBjx\-gitops\-image(1)\fP, \fBjx\-gitops\-ingress(1)\fP, \fBjx\-gitops\-jenkins(1)\fP, \fBjx\-gitops\-kpt(1)\fP, \fBjx\-gitops\-kustomize(1)\fP, \fBjx\-gitops\-label(1)\fP, \fBjx\-gitops\-lint(1)\fP, \fBjx\-gitops\-namespace(1)\fP, \fBjx\-gitops\-plugin(1)\fP, \fBjx\-gitops\-postprocess(1)\fP, \fBjx\-gitops\-pr(1)\fP, \fBjx\-gitops\-rename(1)\fP, \fBjx\-gitops\-repository(1)\fP, \fBjx\-gitops\-requirement(1)\fP, \fBjx\-gitops\-sa(1)\fP, \fBjx\-gitops\-scheduler(1)\fP, \fBjx\-gitops\-split(1)\fP, \fBjx\-gitops\-upgrade(1)\fP, \fBjx\-gitops\-variables(1)\fP, \fBjx\-gitops\-version(1)\fP, \fBjx\-gitops\-versionstream(1)\fP, \fBjx\-gitops\-webhook(1)\fP, \fBjx\-gitops\-yset(1)\fP
 
 
 .SH HISTORY
