docs: polish docs

--- a/docs/man/man1/jx-gitops-yset.1
+++ b/docs/man/man1/jx-gitops-yset.1
@@ -5,7 +5,7 @@
 
 .SH NAME
 .PP
-jx\-gitops\-yset \- Modifies a value in a YAML file at a given path
+jx\-gitops\-yset \- Modifies a value in a YAML file at a given path expression while preserving comments
 
 
 .SH SYNOPSIS
@@ -15,7 +15,7 @@ jx\-gitops\-yset \- Modifies a value in a YAML file at a given path
 
 .SH DESCRIPTION
 .PP
-Modifies one or more yaml files using a path expression
+Modifies one or more yaml files using a path expression while preserving comments
 
 
 .SH OPTIONS
