chore: regen docs

--- a/docs/man/man1/jx-gitops-helm-release.1
+++ b/docs/man/man1/jx-gitops-helm-release.1
@@ -40,6 +40,10 @@ Generate the kubernetes resources from a helm chart
     help for release
 
 .PP
+\fB\-I\fP, \fB\-\-ignore\fP=[preview]
+    the names of helm charts to not release
+
+.PP
 \fB\-\-namespace\fP=""
     the namespace to look for the dev Environment. Defaults to the current namespace
 
