chore: regen docs

--- a/docs/man/man1/jx-gitops-git-merge.1
+++ b/docs/man/man1/jx-gitops-git-merge.1
@@ -15,7 +15,16 @@ jx\-gitops\-git\-merge \- Merge a number of SHAs into the HEAD of the main branc
 
 .SH DESCRIPTION
 .PP
-Merge a number of SHAs into the HEAD of the main branch
+Merge a number of SHAs into the HEAD of the main branch.
+
+.PP
+This command merges a list of commits into a specified branch. If the branch does not exist among local branches, then it is first created.
+
+.PP
+If both \-\-pull\-refs and \-\-sha flags are specified then only those commits specified by \-\-sha are merged into the base branch.
+
+.PP
+If \-\-include\-comment or \-\-exclude\-comment flags are specified, then \-\-pull\-number flag needs to be set as well. If only one of \-\-include\-comment or \-\-exclude\-comment, then only that one is used to filter commits while other is ignored. If both are specified, then only those commits which satisfy \-\-include\-comment and do not satisfy the \-\-exclude\-comment regex are added. Only those commits which are reachable by from pull request and are not reachable by base branch are included to be merged into the base branch.
 
 
 .SH OPTIONS
@@ -50,6 +59,10 @@ Merge a number of SHAs into the HEAD of the main branch
 .PP
 \fB\-\-include\-comment\fP=""
     the regular expression to filter commit comment to include in the merge
+
+.PP
+\fB\-\-merge\-arg\fP=[]
+    the extra arguments to pass to the 'git merge $sha' command to perform the merge
 
 .PP
 \fB\-n\fP, \fB\-\-name\fP=""
