chore: regen docs

--- a/docs/man/man1/jx-gitops-git-merge.1
+++ b/docs/man/man1/jx-gitops-git-merge.1
@@ -77,6 +77,10 @@ If \-\-include\-comment or \-\-exclude\-comment flags are specified, then \-\-pu
     The PullRefs to parse
 
 .PP
+\fB\-r\fP, \fB\-\-rebase\fP[=false]
+    use git rebase instead of merge
+
+.PP
 \fB\-\-remote\fP="origin"
     The name of the remote
 
