--- a/docs/man/man1/jx-gitops-pr-push.1
+++ b/docs/man/man1/jx-gitops-pr-push.1
@@ -32,6 +32,10 @@ Pushes the current git directory to the branch used to create the Pull Request
     the git user email to use if one is not setup
 
 .PP
+\fB\-f\fP, \fB\-\-force\fP[=false]
+    force pushes to the branch
+
+.PP
 \fB\-\-git\-kind\fP=""
     the kind of git server to connect to
 
