--- a/docs/man/man1/jx-gitops-webhook.1
+++ b/docs/man/man1/jx-gitops-webhook.1
@@ -26,7 +26,7 @@ Commands for working with WebHooks on your source repositories
 
 .SH SEE ALSO
 .PP
-\fBjx\-gitops(1)\fP, \fBjx\-gitops\-webhook\-update(1)\fP
+\fBjx\-gitops(1)\fP, \fBjx\-gitops\-webhook\-delete(1)\fP, \fBjx\-gitops\-webhook\-update(1)\fP
 
 
 .SH HISTORY
