chore: regen docs

--- a/docs/man/man1/jx-gitops-helmfile-delete.1
+++ b/docs/man/man1/jx-gitops-helmfile-delete.1
@@ -52,7 +52,7 @@ Deletes a chart from the helmfiles in one or all namespaces
     Sets the logging level. If not specified defaults to $JX\_LOG\_LEVEL
 
 .PP
-\fB\-n\fP, \fB\-\-namespace\fP="jx"
+\fB\-n\fP, \fB\-\-namespace\fP=""
     the namespace to remove the chart from. If blank then remove from all namespaces
 
 .PP
