--- a/docs/man/man1/jx-gitops-pr-variables.1
+++ b/docs/man/man1/jx-gitops-pr-variables.1
@@ -24,8 +24,20 @@ Adds Pull Request environment variables to the .jx/variables.sh file
     specifies the branch if not inside a git clone
 
 .PP
+\fB\-\-comment\-prefix\fP="/jx\-var"
+    the comment prefix to specify environment variables
+
+.PP
+\fB\-\-comments\fP[=false]
+    should we query all the comments on the Pull Request and find any variables using special comments starting with the comment prefix
+
+.PP
 \fB\-\-dir\fP="."
     the directory to search for the .git to discover the git source URL
+
+.PP
+\fB\-\-env\-prefix\fP="PR\fICOMMENT\fP"
+    the prefix added to any variable name defined via a comment. e.g. a comment of '/jx\-var CHEESE=edam' would generate 'export PR\_COMMENT\_CHEESE=edam'
 
 .PP
 \fB\-f\fP, \fB\-\-file\fP=".jx/variables.sh"
