--- a/docs/man/man1/jx-gitops-pr-variables.1
+++ b/docs/man/man1/jx-gitops-pr-variables.1
@@ -29,7 +29,7 @@ Adds Pull Request environment variables to the .jx/variables.sh file
 
 .PP
 \fB\-\-comments\fP[=false]
-    should we query all the comments on the Pull Request and find any variables using special comments starting with the comment prefix
+    if enabled query all the comments on the Pull Request and find any variables using special comments starting with the comment prefix
 
 .PP
 \fB\-\-dir\fP="."
@@ -74,8 +74,12 @@ Adds Pull Request environment variables to the .jx/variables.sh file
 
 .SH EXAMPLE
 .PP
-# add Pull Request env vars to the .jx/variables.sh file
-  jx\-gitops pr variables
+# add variables from the Pull Request and labels to the .jx/variables.sh file
+  jx gitops pr variables
+
+.PP
+# add variables from the Pull Request, labels and comments of the form '/jx\-var FOO=bar' to the .jx/variables.sh file
+  jx gitops pr variables \-\-comments
 
 
 .SH SEE ALSO
