chore: regen docs

--- a/docs/man/man1/jx-gitops-condition.1
+++ b/docs/man/man1/jx-gitops-condition.1
@@ -46,7 +46,7 @@ Runs a command if the condition is true
   jx\-gitops condition \-\-last\-commit\-msg\-prefix 'Merge pull request' \-\- make all commit push
 
 .PP
-you can use ! in front of a filter to be the equivalant of not matching the condition. e.g.
+you can use ! in front of a filter to be the equivalent of not matching the condition. e.g.
 
 .PP
 # runs a command if the last commit message does not have a given prefix
