--- a/docs/man/man1/jx-gitops-helmfile-add.1
+++ b/docs/man/man1/jx-gitops-helmfile-add.1
@@ -82,7 +82,7 @@ Adds a chart to the local 'helmfile.yaml' file
 
 .SH EXAMPLE
 .PP
-# adds a chart using the currently known repositories in the verison stream or helmfile.yaml
+# adds a chart using the currently known repositories in the version stream or helmfile.yaml
   jx\-gitops helmfile add \-\-chart somerepo/mychart
 
 .PP
