--- a/docs/man/man1/jx-gitops-helm-release.1
+++ b/docs/man/man1/jx-gitops-helm-release.1
@@ -68,6 +68,10 @@ Generate the kubernetes resources from a helm chart
     the name of the helm chart to release to. If not specified uses JX\_CHART\_REPOSITORY environment variable
 
 .PP
+\fB\-\-repo\-nested\fP=""
+    the nested repository inside the repository. If not specified defaults to empty (not nested repo)
+
+.PP
 \fB\-\-repo\-password\fP=""
     the password to access the chart repository. If not specified defaults to the environment variable $JX\_REPOSITORY\_PASSWORD
 
