--- a/docs/man/man1/jx-gitops-gc.1
+++ b/docs/man/man1/jx-gitops-gc.1
@@ -26,7 +26,7 @@ Commands for garbage collecting resources
 
 .SH SEE ALSO
 .PP
-\fBjx\-gitops(1)\fP, \fBjx\-gitops\-gc\-activities(1)\fP, \fBjx\-gitops\-gc\-pods(1)\fP
+\fBjx\-gitops(1)\fP, \fBjx\-gitops\-gc\-activities(1)\fP, \fBjx\-gitops\-gc\-jobs(1)\fP, \fBjx\-gitops\-gc\-pods(1)\fP
 
 
 .SH HISTORY
