docs: Regenerate docs
https://github.com/jenkins-x-plugins/jx-gitops/pull/835
https://github.com/jenkins-x/lighthouse/pull/1424
Signed-off-by: Damian Kęska <372403+keskad@users.noreply.github.com>

--- a/docs/man/man1/jx-gitops-webhook-update.1
+++ b/docs/man/man1/jx-gitops-webhook-update.1
@@ -24,12 +24,12 @@ Updates the webhooks for all the source repositories optionally filtering by own
     Runs in batch mode without prompting for user input
 
 .PP
-\fB\-\-endpoint\fP=""
-    Don't use the endpoint from the cluster, use the provided endpoint
+\fB\-\-dev\-ns\fP=""
+    Disable development namespace auto detection, instead use specified namespace
 
 .PP
-\fB\-\-enforce\-namespace\fP=""
-    Disable namespace auto detection, instead use specified namespace
+\fB\-\-endpoint\fP=""
+    Don't use the endpoint from the cluster, use the provided endpoint
 
 .PP
 \fB\-\-exact\-hook\-url\-match\fP[=true]
